fix: added tags

--- a/v14.html
+++ b/v14.html
@@ -328,7 +328,7 @@
                     </div>
                 </fieldset>
                  <fieldset class="mb-6">
-                    <legend class="text-2xl font-bold mb-4 w-full border-b pb-2 text-gray-700">3. Whatsapp номер</legend>
+                    <legend class="text-2xl font-bold mb-4 w-full border-b pb-2 text-gray-700">3. Контакты</legend>
                     <div class="relative">
                         <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-500">+7</span>
                          <input type="tel" name="phone_number" placeholder="(700) 123-45-67" required class="w-full pl-8 pr-4 py-2 border rounded-lg focus:ring-[var(--primary-pink)] focus:border-[var(--primary-pink)]" pattern="[0-9]{10}" title="Введите 10 цифр номера телефона">
