fixed telegram message

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
             // Removed check for presence of legends
 
-            let message = `Спасибо за заказ!\n\n`
+            let message = `Ноп-новый заказ!\n\n`
                 +`Имя ребенка: ${formData.get('child_name')}\n`
                 +`Возраст: ${formData.get('child_age')}\n\n`
                 +`Выбранные книги:\n- ${selectedBooks.join('\n- ')}\n\n`
