--- a/index.html
+++ b/index.html
@@ -244,20 +244,22 @@
         </main>
 
         <!-- New Section: Why Our Coloring Books -->
-        <section id="advantages-of-our-colorings" class="py-16 md:py-24 bg-[var(--background-light)]">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <section id="advantages-of-our-colorings" class="py-16 md:py-24" style="background-color: #f9f9fb;">
+            <div class="container">
                 <!-- Main Question -->
-                <h1 class="text-3xl sm:text-4xl font-bold text-center text-gray-900 dark:text-white mb-12">
-                    Почему наши раскраски — это не просто игра, а умное решение?
-                </h1>
+                <div class="max-w-3xl mx-auto text-center">
+                    <h2 class="section-title">
+                        Почему наши раскраски — это не просто игра, а умное решение?
+                    </h2>
+                </div>
 
                 <!-- Container for the sections -->
-                <div class="space-y-8">
+                <div class="space-y-8 mt-12 max-w-5xl mx-auto">
                     <!-- Scientific Basis Section -->
-                    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8">
-                        <h2 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
+                    <div class="bg-white rounded-2xl shadow-lg p-8">
+                        <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
                             Научная основа
-                        </h2>
+                        </h3>
                         <!-- Key features in a horizontal line on larger screens -->
                         <ul class="grid grid-cols-1 lg:grid-cols-3 gap-8 text-center">
                             <!-- Advantage 1: Stress/Brain -->
@@ -279,10 +281,10 @@
                     </div>
 
                     <!-- Convenience Section -->
-                    <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8">
-                        <h2 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
+                    <div class="bg-white rounded-2xl shadow-lg p-8">
+                        <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
                             Это удобно
-                        </h2>
+                        </h3>
                          <!-- Key features in a horizontal line on larger screens -->
                         <ul class="grid grid-cols-1 lg:grid-cols-3 gap-8 text-center">
                             <!-- Advantage 1: Time saving -->
