--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
                 </div>
 
                 <!-- Container for the sections -->
-                <div class="space-y-8 mt-12 max-w-5xl mx-auto">
+                <!-- Remove max-w-5xl mx-auto from this div -->
+                <div class="space-y-8 mt-12">
                     <!-- Scientific Basis Section -->
                     <div class="bg-white rounded-2xl shadow-lg p-8">
                         <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
