fix: changes in logo, q&a, etc.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Персонализированная книга-раскраска | ABCs</title>
+    <link rel="icon" type="image/png" href="logo.png">
 
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -248,9 +249,9 @@
             <div class="container">
                 <!-- Main Question -->
                 <div class="max-w-3xl mx-auto text-center">
-                    <h2 class="section-title">
+                    <h3 class="section-title">
                         Почему наши раскраски — это не просто игра, а умное решение?
-                    </h2>
+                    </h3>
                 </div>
 
                 <!-- Container for the sections -->
@@ -258,9 +259,9 @@
                 <div class="space-y-8 mt-12">
                     <!-- Scientific Basis Section -->
                     <div class="bg-white rounded-2xl shadow-lg p-8">
-                        <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
+                        <!-- <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
                             Научная основа
-                        </h3>
+                        </h3> -->
                         <!-- Key features in a horizontal line on larger screens -->
                         <ul class="grid grid-cols-1 lg:grid-cols-3 gap-8 text-center">
                             <!-- Advantage 1: Stress/Brain -->
@@ -283,9 +284,9 @@
 
                     <!-- Convenience Section -->
                     <div class="bg-white rounded-2xl shadow-lg p-8">
-                        <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
+                        <!-- <h3 class="text-3xl font-bold mb-6 text-[var(--primary-blue)] text-center">
                             Это удобно
-                        </h3>
+                        </h3> -->
                          <!-- Key features in a horizontal line on larger screens -->
                         <ul class="grid grid-cols-1 lg:grid-cols-3 gap-8 text-center">
                             <!-- Advantage 1: Time saving -->
@@ -453,6 +454,18 @@
                         </div>
                         <div class="faq-answer">
                             <p>На данный момент все наши книги-раскраски доступны на русском и казахском языках.</p>
+                        </div>
+                    </div>
+                    <!-- New FAQ Item -->
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <h3>Безопасно ли загружать фото ребёнка?</h3>
+                            <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path></svg>
+                        </div>
+                        <div class="faq-answer">
+                            <p>Да, абсолютно. Мы очень серьёзно относимся к безопасности ваших данных:</p>
+                            <p>* Не публикуем: Ваши фото никогда не попадут в открытый доступ без вашего личного согласия.</p>
+                            <p>* Не передаём: Доступ к файлам для третьих лиц полностью закрыт.</p>
                         </div>
                     </div>
                 </div>
