fix: added space before recommentations book covers

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 </div>
             </div>
        </section>
-       <section id="recommendations" class="pt-16 md:pt-24 pb-8 bg-[var(--background-light)]"><div class="container"><h2 class="section-title !text-4xl md:!text-5xl">Другие книги-раскраски из этой серии</h2><div id="recommendations-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div></div></section>
+       <section id="recommendations" class="pt-16 md:pt-24 pb-8 bg-[var(--background-light)]"><div class="container"><h2 class="section-title !text-4xl md:!text-5xl">Другие книги-раскраски из этой серии</h2><br></br><div id="recommendations-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div></div></section>
     </div>
 
     <!-- Main Order Modal -->
