feat: added animation to hero section

--- a/index.html
+++ b/index.html
@@ -208,6 +208,49 @@
         .faq-item.active .faq-question .icon {
             transform: rotate(45deg); /* Rotate icon for active state */
         }
+
+        /* Hero Slideshow Styles */
+        .hero-slideshow {
+            position: relative;
+            width: 100%; /* Take full width of its flex container */
+            max-width: 400px; /* Limit max width */
+            height: 400px; /* Fixed height */
+            margin: 0 auto; /* Center horizontally */
+            overflow: hidden;
+        }
+
+        .hero-slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+            display: flex; /* Use flexbox to center image */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .hero-slide img {
+            display: block;
+            max-width: 100%; /* Ensure image fits within container */
+            max-height: 100%; /* Ensure image fits within container */
+            width: auto; /* Maintain aspect ratio */
+            height: auto; /* Maintain aspect ratio */
+            object-fit: contain; /* Ensure image is fully visible */
+        }
+
+        .hero-slide.active {
+            opacity: 1;
+        }
+
+        @media (min-width: 768px) {
+            .hero-slideshow {
+                max-width: 500px; /* Larger max width on medium screens */
+                height: 500px; /* Larger height on medium screens */
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -228,18 +271,33 @@
     <!-- Main Content Wrapper -->
     <div id="main-content">
         <!-- Hero Section -->
-        <main class="py-20 md:py-28 text-center relative overflow-hidden flex items-center justify-center" style="min-height: 700px; background-color: rgba(52, 152, 219, 0.1);"> <!-- Changed background color to blue tint -->
-            <div class="blob w-96 h-96 bg-[var(--primary-blue)] -top-20 -left-20"></div> <!-- Changed from green -->
+        <main class="py-20 md:py-28 text-center relative overflow-hidden flex items-center justify-center" style="min-height: 700px; background-color: rgba(52, 152, 219, 0.1);">
+            <div class="blob w-96 h-96 bg-[var(--primary-blue)] -top-20 -left-20"></div>
             <div class="blob w-80 h-80 bg-[var(--soft-blue)] -bottom-20 -right-20"></div>
             <div class="container relative">
-                <h1 class="text-5xl md:text-7xl font-bold text-[var(--text-dark)] leading-tight max-w-4xl mx-auto">
-                    Персонализированная книга-раскраска с обучающим элементом
-                </h1>
-                <p class="mt-4 text-xl md:text-2xl text-[var(--text-light)] max-w-3xl mx-auto">
-                    Подарите ребенку уникальное приключение, где он станет главным героем собственной истории!
-                </p>
-                <div class="mt-8">
-                    <a href="#pricing" class="btn btn-primary text-lg">Выбрать план</a>
+                <div class="flex flex-col md:flex-row items-center justify-center gap-8">
+                    <div class="flex-1 text-center md:text-left">
+                        <h1 class="text-5xl md:text-7xl font-bold text-[var(--text-dark)] leading-tight max-w-4xl mx-auto md:mx-0">
+                            Персонализированная книга-раскраска с обучающим элементом
+                        </h1>
+                        <p class="mt-4 text-xl md:text-2xl text-[var(--text-light)] max-w-3xl mx-auto md:mx-0">
+                            Подарите ребенку уникальное приключение, где он станет главным героем собственной истории!
+                        </p>
+                        <div class="mt-8">
+                            <a href="#pricing" class="btn btn-primary text-lg">Выбрать план</a>
+                        </div>
+                    </div>
+                    <!-- Slideshow Container -->
+                    <div class="flex-1 flex justify-center">
+                        <div id="hero-slideshow" class="hero-slideshow">
+                            <div class="hero-slide active"><img src="hero/girl_1.png" alt="Girl 1"></div>
+                            <div class="hero-slide"><img src="hero/girl_2.png" alt="Girl 2"></div>
+                            <div class="hero-slide"><img src="hero/girl_3.png" alt="Girl 3"></div>
+                            <div class="hero-slide"><img src="hero/girl_4.png" alt="Girl 4"></div>
+                            <div class="hero-slide"><img src="hero/girl_5.png" alt="Girl 5"></div>
+                            <div class="hero-slide"><img src="hero/girl_6.png" alt="Girl 6"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
@@ -564,7 +622,7 @@
             ],
             "Безопастность": [
                 { id: "security-1", title: "Спасательный отряд Айдара: «Водные спасатели»", short_desc: "Как правила на воде превращают пляж в безопасное королевство.", pages: "book_security_first_1.jpg,book_security_end.jpg", full_desc: "Айдар и его верный робот-помощник патрулируют побережье и учат малышей правилам безопасности на воде. С их помощью зверята узнают, как правильно пользоваться спасательным кругом, не заплывать за буйки и всегда быть начеку у воды. В финале Айдар открывает Школу Юных Спасателей, где каждый может стать героем пляжа!" },
-                { id: "security-2", title: "Спасательный отряд Армана: «Город безопасности»", short_desc: "Как простые правила делают весь город крепостью безопасности.", pages: "book_security_second_1.jpg,book_security_end.jpg", full_desc: "Арман со своим дружелюбным роботом охраняют улицы Города Осторожности. Они помогают зверятам переходить дорогу на зелёный свет, не разговаривать с незнакомцами и знать, что делать в экстренной ситуации. Каждый день — новая миссия! В конце Арман открывает Академию Безопасности, чтобы каждый житель знал, как защитить себя и других." }
+                { id: "security-2", title: "Спасательный отряд Армана: «Город безопасности»", short_desc: "Как простые правила делают весь город крепостью безопасности.", pages: "book_security_second_1.jpg,book_security_second_2.jpg,book_security_end.jpg", full_desc: "Арман со своим дружелюбным роботом охраняют улицы Города Осторожности. Они помогают зверятам переходить дорогу на зелёный свет, не разговаривать с незнакомцами и знать, что делать в экстренной ситуации. Каждый день — новая миссия! В конце Арман открывает Академию Безопасности, чтобы каждый житель знал, как защитить себя и других." }
             ]
         };
 
@@ -772,30 +830,20 @@ chatIds.forEach(chatId => {
             });
         });
 
-        // Function to load and display FAQ - REMOVED
-        // const loadFAQ = async () => {
-        //     try {
-        //         const response = await fetch('qa.json');
-        //         const data = await response.json();
-        //         if (data && data.faq) {
-        //             data.faq.forEach(item => {
-        //                 const faqItem = document.createElement('div');
-        //                 faqItem.className = 'border-b border-gray-200 pb-4'; // Add border and padding
-        //                 faqItem.innerHTML = `
-        //                     <h3 class="text-xl font-semibold text-gray-800 mb-2">${item.question}</h3>
-        //                     <p class="text-gray-600">${item.answer}</p>
-        //                 `;
-        //                 faqContainer.appendChild(faqItem);
-        //             });
-        //         }
-        //     } catch (error) {
-        //         console.error('Error loading FAQ:', error);
-        //     }
-        // };
-
-        // Load FAQ when the page loads - REMOVED
-        // loadFAQ();
+        // --- HERO SLIDESHOW LOGIC ---
+        const slides = document.querySelectorAll('#hero-slideshow .hero-slide');
+        let currentSlide = 0;
+        if (slides.length > 0) {
+            setInterval(() => {
+                slides[currentSlide].classList.remove('active');
+                currentSlide = (currentSlide + 1) % slides.length;
+                slides[currentSlide].classList.add('active');
+            }, 3000); // Change slide every 3 seconds
+        }
+        // --- END HERO SLIDESHOW LOGIC ---
     });
     </script>
+</body>
+</html>
 </body>
 </html>
