fix: update text and structure in the main section for clarity and engagement

--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
                 <div class="flex flex-col-reverse md:flex-row items-center justify-center gap-8 md:gap-12">
                     <div class="flex-1 text-center md:text-left">
                         <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-[var(--text-dark)] leading-tight max-w-4xl mx-auto md:mx-0">
-                            Персонализированная раскраска с обучающим элементом
+                            <span class="text-[var(--primary-blue)] font-extrabold underline decoration-2 underline-offset-4">Персонализированная</span> раскраска с обучающим элементом
                         </h1>
                         <p class="mt-4 text-lg md:text-xl text-[var(--text-light)] max-w-2xl mx-auto md:mx-0">
                             Подарите ребенку уникальное приключение, где он станет главным героем собственной истории!
                         </p>
                         <div class="mt-8">
-                            <a href="#pricing" class="btn btn-primary text-lg">Выбрать план</a>
+                            <a href="#pricing" class="btn btn-primary text-lg">Купить раскраску</a>
                         </div>
                     </div>
                     <!-- Slideshow Container -->
@@ -287,19 +287,15 @@
                 <div class="max-w-3xl mx-auto text-center">
                     <h2 class="text-4xl md:text-5xl font-bold text-[var(--text-dark)] mb-4">Почему наши раскраски — это не просто игра?</h2>
                 </div>
-                <div class="space-y-8 mt-12">
-                    <div class="bg-white rounded-2xl shadow-lg p-6 md:p-8">
-                        <ul class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg><span>Раскрашивание снижает стресс и активирует мозг</span></li>
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5S19.832 5.477 21 6.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253"></path></svg><span>Персонализация усилиет вовлечённость и обучение</span></li>
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span>Развиваются: эмпатия, внимание, воображение и саморегуляция</span></li>
-                        </ul>
-                    </div>
-                    <div class="bg-white rounded-2xl shadow-lg p-6 md:p-8">
-                        <ul class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><strong>Экономия времени:</strong> не нужно искать идеи, всё уже готово</span></li>
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span><strong>Развитие без стресса:</strong> ребёнок играет, вы видите результат</span></li>
-                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-[var(--primary-blue)] mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m0 0l-7 7m7-7v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg><span><strong>Гибкость:</strong> используйте дома, в детсаду или в дороге</span></li>
+                <div class="mt-12">
+                    <div class="bg-white border-l-4 border-green-500 rounded-2xl shadow-lg p-6 md:p-8">
+                        <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 text-center">
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-blue-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg><span class="text-blue-800">Раскрашивание снижает стресс и активирует мозг</span></li>
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-green-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5S19.832 5.477 21 6.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253"></path></svg><span class="text-green-800">Персонализация усилиет вовлечённость и обучение</span></li>
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-blue-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span class="text-blue-800">Развиваются: эмпатия, внимание, воображение и саморегуляция</span></li>
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-green-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span class="text-green-800">Экономия времени: не нужно искать идеи, всё уже готово</span></li>
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-blue-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg><span class="text-blue-800">Развитие без стресса: ребёнок играет, вы видите результат</span></li>
+                            <li class="flex flex-col items-center"><svg class="w-10 h-10 text-green-600 mb-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m0 0l-7 7m7-7v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg><span class="text-green-800">Гибкость: используйте дома, в детсаду или в дороге</span></li>
                         </ul>
                     </div>
                 </div>
