--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             ],
             "Безопасность": [
                 { id: "security-1", title: "Водные спасатели", short_desc: "Как правила на воде превращают пляж в безопасное королевство.", pages: "book_security_first_1.jpg,book_security_end.jpg", full_desc: "Айдар и его верный робот-помощник патрулируют побережье и учат малышей правилам безопасности на воде. С их помощью зверята узнают, как правильно пользоваться спасательным кругом, не заплывать за буйки и всегда быть начеку у воды. В финале Айдар открывает Школу Юных Спасателей, где каждый может стать героем пляжа!" },
-                { id: "security-2", title: "Город безопасности", short_desc: "Как простые правила делают весь город крепостью безопасности.", pages: "book_security_second_1.jpg,book_security_second_2.jpg,book_security_end.jpg", full_desc: "Арман со своим дружелюбным роботом охраняют улицы Города Осторожности. Они помогают зверятам переходить дорогу на зелёный свет, не разговаривать с незнакомцами и знать, что делать в экстренной ситуации. Каждый день — новая миссия! В конце Арман открывает Академию Безопасности, чтобы каждый житель знал, как защитить себя и других." }
+                { id: "security-2", title: "Город безопасности", short_desc: "Как простые правила делают весь город крепостью безопасности.", pages: "book_security_second_1.jpg,book_security_end.jpg", full_desc: "Арман со своим дружелюбным роботом охраняют улицы Города Осторожности. Они помогают зверятам переходить дорогу на зелёный свет, не разговаривать с незнакомцами и знать, что делать в экстренной ситуации. Каждый день — новая миссия! В конце Арман открывает Академию Безопасности, чтобы каждый житель знал, как защитить себя и других." }
             ]
         };
         const FAQ_DATA = [
